--- a/new_static_site/gallery.html
+++ b/new_static_site/gallery.html
@@ -1,108 +1,105 @@
 <!doctype html>
 <html lang="en" class="dark">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo Gallery - FIDIPA</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Photo Gallery - FIDIPA</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <style>
+    .sticky-header {
+      transform: translateY(-100%);
+      transition: transform 0.3s ease;
+    }
+    .sticky-header.visible {
+      transform: translateY(0);
+    }
+  </style>
 </head>
 <body class="bg-light dark:bg-dark text-dark dark:text-white antialiased">
-    <div id="app-container" class="min-h-screen flex flex-col">
-        <!-- Navbar Placeholder -->
-        <header id="navbar-container" class="fixed w-full z-50 bg-white/95 dark:bg-dark/95 backdrop-blur-sm">
-             <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="flex items-center justify-between h-16">
-                    <a href="index.html#home" class="fidipa-logo text-dark dark:text-white font-bold text-xl hover:scale-105 active:scale-95 transition-transform duration-150">FIDIPA</a>
-                    <div class="hidden md:flex items-center space-x-4">
-                        <div class="flex items-baseline space-x-1" id="desktop-nav-links">
-                            <a href="index.html#home" data-navid="home" class="nav-link px-3 py-2 rounded-md text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white transition-colors duration-300 relative">Home <span class="active-indicator"></span></a>
-                            <a href="index.html#about" data-navid="about" class="nav-link px-3 py-2 rounded-md text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white transition-colors duration-300 relative">About <span class="active-indicator"></span></a>
-                            <a href="index.html#programs" data-navid="programs" class="nav-link px-3 py-2 rounded-md text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white transition-colors duration-300 relative">Programs <span class="active-indicator"></span></a>
-                            <a href="index.html#team" data-navid="team" class="nav-link px-3 py-2 rounded-md text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white transition-colors duration-300 relative">Team <span class="active-indicator"></span></a>
-                            <a href="index.html#gallery" data-navid="gallery" class="nav-link px-3 py-2 rounded-md text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white transition-colors duration-300 relative">Gallery <span class="active-indicator"></span></a>
-                            <a href="index.html#contact" data-navid="contact" class="nav-link px-3 py-2 rounded-md text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white transition-colors duration-300 relative">Contact <span class="active-indicator"></span></a>
-                        </div>
-                        <button id="theme-toggle-desktop" aria-label="Toggle theme" class="theme-toggle-button p-2 rounded-full hover:bg-gray-100 dark:hover:bg-dark-lighter transition-colors hover:scale-110 active:scale-90 duration-150">
-                            <svg class="sun-icon w-5 h-5 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.66-15.66l-.707.707M4.04 19.96l-.707.707M21 12h-1M4 12H3m15.66 8.66l-.707-.707M4.04 4.04l-.707-.707"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18a6 6 0 100-12 6 6 0 000 12z"></path></svg>
-                            <svg class="moon-icon w-5 h-5 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
-                        </button>
-                    </div>
-                    <div class="md:hidden flex items-center space-x-2">
-                        <button id="theme-toggle-mobile" aria-label="Toggle theme" class="theme-toggle-button p-2 text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:scale-110 active:scale-90 transition-transform duration-150">
-                            <svg class="sun-icon w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.66-15.66l-.707.707M4.04 19.96l-.707.707M21 12h-1M4 12H3m15.66 8.66l-.707-.707M4.04 4.04l-.707-.707"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18a6 6 0 100-12 6 6 0 000 12z"></path></svg>
-                            <svg class="moon-icon w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
-                        </button>
-                        <button id="mobile-menu-button" aria-label="Open menu" class="p-2 text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:scale-110 active:scale-90 transition-transform duration-150">
-                            <svg id="menu-icon" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-                            <svg id="x-icon" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-                        </button>
-                    </div>
-                </div>
-            </nav>
-            <div id="mobile-menu" class="md:hidden bg-white/95 dark:bg-dark-lighter/95 backdrop-blur-sm overflow-hidden max-h-0 opacity-0">
-                <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3" id="mobile-nav-links">
-                    <a href="index.html#home" data-navid="home" class="nav-link block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:bg-gray-100/30 dark:hover:bg-dark-accent/30">Home</a>
-                    <a href="index.html#about" data-navid="about" class="nav-link block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:bg-gray-100/30 dark:hover:bg-dark-accent/30">About</a>
-                    <a href="index.html#programs" data-navid="programs" class="nav-link block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:bg-gray-100/30 dark:hover:bg-dark-accent/30">Programs</a>
-                    <a href="index.html#team" data-navid="team" class="nav-link block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:bg-gray-100/30 dark:hover:bg-dark-accent/30">Team</a>
-                    <a href="index.html#gallery" data-navid="gallery" class="nav-link block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:bg-gray-100/30 dark:hover:bg-dark-accent/30">Gallery</a>
-                    <a href="index.html#contact" data-navid="contact" class="nav-link block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-600 dark:text-gray-300 hover:text-dark dark:hover:text-white hover:bg-gray-100/30 dark:hover:bg-dark-accent/30">Contact</a>
-                </div>
-            </div>
-        </header>
+  <div id="app-container" class="min-h-screen flex flex-col">
 
-        <main class="flex-1 pt-16 bg-light dark:bg-dark">
-            <div class="pt-12 pb-16 min-h-screen">
-                <div class="max-w-7xl mx-auto px-4">
-                    <a href="javascript:history.back()" title="Go Back"
-                       class="mb-4 sm:mb-6 lg:mb-8 bg-white dark:bg-dark-lighter hover:bg-light-darker dark:hover:bg-dark-accent p-3 sm:p-4 rounded-lg transition-all duration-300 group shadow-lg inline-block">
-                        <svg class="w-6 h-6 text-primary group-hover:scale-110 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
-                    </a>
-                    <h1 class="text-4xl font-bold mb-12 text-center text-gray-900 dark:text-white animate-on-scroll fade-in-up">
-                        Photo Gallery
-                    </h1>
+    <!-- Normal Header (now matching floating size) -->
+<header class="w-full bg-transparent">
+  <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-4">
+    <a href="javascript:history.back()" title="Go Back" class="flex items-center text-primary hover:scale-105 transition-transform">
+      <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+      </svg>
+      <span class="font-medium text-base">Back</span>
+    </a>
+    <h1 class="text-lg sm:text-xl font-bold text-gray-900 dark:text-white text-center w-full -ml-12 sm:-ml-16">
+      Photo Gallery
+    </h1>
+  </div>
+</header>
 
-                    <div id="gallery-grid-container" class="gallery-masonry-container animate-on-scroll fade-in-up" style="transition-delay: 0.2s;">
-                        <!-- Gallery items will be injected here by JS -->
-                        <p class="text-center text-gray-500 dark:text-gray-400 col-span-full">Loading gallery...</p>
-                    </div>
-                </div>
-            </div>
-        </main>
 
-        <!-- Lightbox Structure -->
-        <div id="lightbox" class="lightbox">
-            <div class="lightbox-content">
-                <img id="lightbox-image" src="" alt="Selected gallery image" />
-                <button id="lightbox-close" class="lightbox-close" aria-label="Close lightbox">
-                    &times; <!-- Simple 'X' icon -->
-                </button>
-                <button id="lightbox-prev" class="lightbox-nav prev" aria-label="Previous image">&#10094;</button>
-                <button id="lightbox-next" class="lightbox-nav next" aria-label="Next image">&#10095;</button>
-            </div>
-        </div>
-
-        <!-- Footer -->
-        <footer id="footer-container" class="py-4 bg-white dark:bg-dark-lighter border-t border-gray-200 dark:border-gray-800">
-             <div class="max-w-7xl mx-auto px-4">
-                <p class="text-center text-sm text-gray-600 dark:text-gray-400">
-                  © 2025
-                  <a
-                    href="https://alphonseaaronmumbo.web.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="text-primary hover:text-primary/80 transition-colors"
-                  >
-                    Alphonse Mumbo
-                  </a>
-                  – Professional UI/UX Designer and Developer. All rights reserved.
-                </p>
-            </div>
-        </footer>
+    <!-- Sticky App Bar (hidden at top) -->
+    <div id="sticky-header" class="sticky-header fixed top-0 left-0 w-full z-50 bg-white/95 dark:bg-dark/95 shadow-md backdrop-blur">
+      <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-4">
+        <a href="javascript:history.back()" title="Go Back" class="flex items-center text-primary hover:scale-105 transition-transform">
+          <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+          </svg>
+          <span class="font-medium text-base">Back</span>
+        </a>
+        <h1 class="text-lg sm:text-xl font-bold text-gray-900 dark:text-white text-center w-full -ml-12 sm:-ml-16">
+          Photo Gallery
+        </h1>
+      </div>
     </div>
-    <script src="js/main.js"></script>
+
+    <!-- Main Content -->
+    <main class="flex-1 pt-6">
+      <div class="pb-16 min-h-screen">
+        <div class="max-w-7xl mx-auto px-4">
+          <div id="gallery-grid-container" class="gallery-masonry-container animate-on-scroll fade-in-up" style="transition-delay: 0.2s;">
+            <p class="text-center text-gray-500 dark:text-gray-400 col-span-full">Loading gallery...</p>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Lightbox -->
+    <div id="lightbox" class="lightbox">
+      <div class="lightbox-content">
+        <img id="lightbox-image" src="" alt="Selected gallery image" />
+        <button id="lightbox-close" class="lightbox-close" aria-label="Close lightbox">&times;</button>
+        <button id="lightbox-prev" class="lightbox-nav prev" aria-label="Previous image">&#10094;</button>
+        <button id="lightbox-next" class="lightbox-nav next" aria-label="Next image">&#10095;</button>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="py-4 bg-white dark:bg-dark-lighter border-t border-gray-200 dark:border-gray-800">
+      <div class="max-w-7xl mx-auto px-4">
+        <p class="text-center text-sm text-gray-600 dark:text-gray-400">
+          © 2025
+          <a href="https://alphonseaaronmumbo.web.app/" target="_blank" rel="noopener noreferrer"
+             class="text-primary hover:text-primary/80 transition-colors">
+            Alphonse Mumbo
+          </a>
+          – Professional UI/UX Designer and Developer. All rights reserved.
+        </p>
+      </div>
+    </footer>
+  </div>
+
+  <script>
+    const stickyHeader = document.getElementById('sticky-header');
+
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 40) {
+        stickyHeader.classList.add('visible');
+      } else {
+        stickyHeader.classList.remove('visible');
+      }
+    });
+  </script>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
